Fixes vertical alignment of flipcard text

--- a/source/components/home/about/styles.scss
+++ b/source/components/home/about/styles.scss
@@ -47,6 +47,11 @@
     -webkit-transition-timing-function: linear;
     transition-timing-function: linear;
     vertical-align: middle;
+    height: 40vh;
+    
+}
+.ReactFlipCard__Flipper {
+    margin-bottom: 40vh!important;
 }
 
 .ReactFlipCard__Front {
@@ -65,11 +70,14 @@
     font-weight: 100;
     border: none;
     opacity: 2;
-    margin-bottom: 10px;
 }
 
 .descrip {
     font-size: 20px;
+}
+
+div.frontHeading {
+    padding-top:calc(12/40 * 40vh);
 }
 
 @media (max-width: 1240px) {
@@ -84,14 +92,17 @@
     .ReactFlipCard__Back {
         width: 85vw;
         margin: 0 auto;
-        height: 190px;
-        margin-bottom: 10px;
+        height: 40vw;
+        margin-bottom: 2vh;
     }
     
     .ReactFlipCard__Front{
         width: 85vw;
-        margin: 0 auto;
+        height: 40vw;
         min-height: 65px;
+    }
+    div.frontHeading {
+        padding-top:15vw;
     }
 }
 
@@ -108,11 +119,17 @@
         width: 85vw;
         margin: 0 auto;
         margin-bottom: 1em;
+        height: 120vw!important;
         min-height: 320px;
     }
+    .ReactFlipCard__Front {
+        height: 120vw!important;
+    }
 
+    div.frontHeading {
+        padding-top: 7.5em;
+    }
     .descrip {
         font-size: 18px;
     }
 }
-
